Add Project Files

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ CLOUD_API_SECRET=TbhkGYkEK__S2WjOWl_vo_lPX-0
 ATLASDB_URL=mongodb+srv://anitha248:Anitha02082004@cluster0.hwdkepq.mongodb.net/wanderlust?retryWrites=true&w=majority&appName=Cluster0
 
 
-ATLASDB_URL1=mongodb+srv://anitha248:Anitha02082004@cluster0.mongodb.net/wanderlust
+SECRET=bbgvjerbvkerdrvhgtdssxhgjfc
